# oxidised_attendance_tracker

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
migrations/2023-11-02-124206_create_event/: up.sql
migrations/2023-11-02-125328_create_attendee/: up.sql
migrations/2023-11-11-155847_create_event/: up.sql
migrations/2023-11-11-155850_create_attendee/: up.sql
src/: database.rs  main.rs  models.rs  schema.rs
