[package]
name = "oxidised_attendance_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.3", features = ["postgres", "serde_json"] }
dotenv = "0.15.0"
rocket = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
