[package]
name = "oxidised_attendance_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
diesel = { version = "2.1.3", features = ["postgres", "serde_json", "chrono"] }
dotenv = "0.15.0"
rocket = "=0.5.0-rc.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
