[package]
name = "oxidised_attendance_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3.0"
dotenv = "0.15.0"
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
shuttle-rocket = "0.32.0"
shuttle-runtime = "0.32.0"
shuttle-shared-db = { version = "0.32.0", features = ["postgres"] }
sqlx = { version = "0.7.2", features = ["postgres", "json", "runtime-tokio"] }
